@@ -1,3 +1,14 @@
+2011-04-13  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
+
+	* include/network/Handler.tcc: Clean up.
+	* src/solver/RelSatSolver.cpp: Likewise.
+	* src/network/Server.cpp: Likewise.
+	* src/network/OutputThread.cpp: Likewise.
+	* src/network/JoinThread.cpp: Likewise.
+	* include/network/Server.h: Likewise.
+
+	* include/dmcs/ProgramOptions.h: Change some commandline options.
+
 2011-04-04  Minh Dao-Tran  <dao@kr.tuwien.ac.at>
 
 	* examples/runTest.sh: ulimit to the rescure.
